<resources>
    <string name="app_name">Voxmed</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="welcome_to">Welcome to</string>
    <string name="voxmedapp">Voxmed App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="donthaveanaccount">Don\'t have an account?</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="rememberpassword">Remember Password?</string>
    <string name="haveaccount">Have account?</string>
    <string name="name">Name</string>
    <string name="reports">Reports</string>
    <string name="myreports">My Reports</string>
    <string name="report_detail">Doctor\'s Report Detail</string>
    <string name="here_doctor_report_text">Here is doctor\'s report text...</string>
    <string name="myprofile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search_">Search...</string>
    <string name="logged_out">Logged Out</string>
    <string name="iamdoctor">I am a doctor</string>
    <string name="addreport">Add Report</string>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="listening">Listening…</string>
    <string name="load_file">Load file</string>
    <string name="doctor">Doctor</string>
    <string name="employee">Employee</string>
    <string name="patient">Patient</string>
    <string name="load_profile_picture">Load your profile picture.</string>
    <string name="enter_name">Enter your name.</string>
    <string name="enter_email">Enter your email.</string>
    <string name="enter_password">Enter your password.</string>
    <string name="enter_valid_email">Enter valid email.</string>
    <string name="select_role">Select your role.</string>
    <string name="existing_user">This user has already been registered.</string>
    <string name="existing_email">Someone is using the same email. Please try with another one.</string>
    <string name="unregistered_user">You haven\'t been registered. Please signup.</string>
    <string name="incorrect_password">Your password is incorrect.</string>
    <string name="login_success">You logged in successfully.</string>
    <string name="signup_success">You registered successfully.</string>
    <string name="server_issue">Server issue</string>
    <string name="check_email">Please check your email.</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="romanian">Romanian</string>
    <string name="swedish">Swedish</string>
    <string name="real_time_report">Realtime Report</string>
    <string name="next">Next</string>
    <string name="recording_started">Recording started</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="audio_playing">Playing Audio</string>
    <string name="playing_stopped">Playing stopped</string>
    <string name="please_record_report">Please record realtime report.</string>
    <string name="click_on_record_to_speak_here">Click on Record button to speak here...</string>
    <string name="submit">Submit</string>
    <string name="reviewed_and_corrected">Reviewed and corrected</string>
    <string name="load_picture">Load picture</string>
    <string name="enter_patient_ID">Enter patient ID</string>
    <string name="optional">Optional</string>
    <string name="unexisting_patient">That patient doesn\'t exist</string>
    <string name="submitted">Submitted</string>
    <string name="patientID">Patient ID:</string>
    <string name="select_patient">Select a patient</string>
    <string name="no_result">No uploaded data&#8230;</string>
    <string name="corrected">Corrected</string>
    <string name="loading">Loading...</string>
    <string name="refreshing">Refreshing...</string>
    <string name="image_downloaded_at">Image downloaded at</string>
    <string name="correct_report">Correct Report</string>
    <string name="resubmitted">Resubmitted</string>
    <string name="unexisting_report">That report doesn\'t exist</string>
    <string name="please_stop_recording">Please stop recording</string>
    <string name="please_stop_playing">Please stop playing</string>
    <string name="resubmit">Resubmit</string>
    <string name="reset">Reset</string>

    <string name="age">Age</string>
    <string name="addpatient">Add Patient</string>
    <string name="newpatient">New Patient</string>
    <string name="editpatient">Edit Patient</string>
    <string name="enter_age">Enter age</string>
    <string name="share_">Share ...</string>
    <string name="load_pictures">Load pictures</string>
    <string name="newpatientadded">New patient has been added.</string>


    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <string name="enter_keyword">Enter keyword</string>

    <string name="enter_content">Enter content</string>
    <string name="complete_form">Complete this form</string>
    <string name="change_template">Change Template</string>
    <string name="templates">Templates</string>
    <string name="fillinemptyfields">Please fill in empty field.</string>

    <string name="setupkeywords">Setup Keywords</string>
    <string name="setup_keyword_template">Setup keywords for the report template.\nDrag item to rearrange.</string>
    <string name="add_keyword">+ Add Keyword</string>
    <string name="new_keyword">New Keyword</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="saved">Saved</string>
    <string name="keywords">Keywords</string>

    <string name="complete_report">Please complete the report.</string>
    <string name="items">Items:</string>
    <string name="import_temp">Import Template</string>
    <string name="select">Select</string>
    <string name="view_detail">View Detail</string>
    <string name="enter_temp_name">Enter template name.</string>
    <string name="new_line">new line</string>
    <string name="next_">next</string>
    <string name="point">point</string>
    <string name="comma">comma</string>
    <string name="space">space</string>
    <string name="warning">Warning!</string>
    <string name="areyousuredeletetemplate">Are you sure you want to delete this template?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sharevia">Share via</string>
    <string name="whatsapp">WhatsApp</string>

    <string name="patients">Patients</string>
    <string name="patient_updated">Patient updated</string>
    <string name="general_keywords">General Keywords</string>
    <string name="change_keyword">Change the keyword?</string>

    <string name="patient_ID">PatientID</string>
    <string name="patient_name">Patient Name</string>
    <string name="export_success">Export successful</string>
    <string name="export_failed">Export failed</string>
    <string name="export">Export</string>

    <string name="new_line_desc">Automatically add a new line to the report when you speak.</string>
    <string name="generalkeyworddesc">Add a point to the report when you speak.</string>

</resources>
































