<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.GeneralKeywordsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/primary_gradient_rect">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:onClick="back"
                android:src="@drawable/leftarrow"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/general_keywords"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/caption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:text="@string/new_line"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="25dp"
                android:paddingTop="10dp"
                android:textColor="@color/text"
                android:text="@string/new_line_desc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/caption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:text="@string/point"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="25dp"
                android:paddingTop="10dp"
                android:textColor="@color/text"
                android:text="@string/generalkeyworddesc"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:layout_height="0px"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>
