<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rect_fill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_alert_header">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_margin="15dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/cancelicon"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/content"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areyousuredeletetemplate"
                android:textSize="16sp"
                android:lineSpacingExtra="5dp"
                android:textColor="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/no_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/yes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/yes"
                    android:layout_marginLeft="60dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>





























