<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SettingsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/primary_gradient_rect">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:onClick="back"
                android:src="@drawable/leftarrow"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/settings"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/caption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:text="@string/language"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:layout_marginTop="10dp">
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="10dp"
                        android:textSize="16sp"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:drawableRight="@drawable/ic_english"
                        android:drawablePadding="20dp"
                        android:text="@string/english"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginRight="50dp"
                        android:layout_height="1.5dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray"/>
                    <RadioButton
                        android:id="@+id/ro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="10dp"
                        android:textSize="16sp"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:drawableRight="@drawable/ic_romanian"
                        android:drawablePadding="20dp"
                        android:text="@string/romanian"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginRight="50dp"
                        android:layout_height="1.5dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/gray"/>
                    <RadioButton
                        android:id="@+id/sv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="10dp"
                        android:textSize="16sp"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:drawableRight="@drawable/ic_swedish"
                        android:drawablePadding="20dp"
                        android:text="@string/swedish"/>
                </RadioGroup>
            </FrameLayout>

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/button_shadow"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/save"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:layout_height="0px"
            android:layout_weight="1" />

    </LinearLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineScaleParty"
        app:indicator_color="#F53700" />
</FrameLayout>
